# cobalt-stack

./: .env.example  .gitignore  CHAT_FEATURE_READY.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  LICENSE  MULTI_PROVIDER_LLM.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  models.toml  package-lock.json  package.json  traefik.yml
.claude/: .superclaude-metadata.json  CLAUDE.md
.next/: trace
backend/: .env.example  Cargo.toml  Dockerfile  clippy.toml  rustfmt.toml
backend/examples/: test_model_registry.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250101_000001_create_initial_schema.rs  m20250125_000001_create_auth_tables.rs  m20250126_000001_add_email_verification_and_roles.rs  m20250127_000001_create_chat_tables.rs
backend/openapi/: schema.json
backend/src/: lib.rs  main.rs
backend/src/application/: mod.rs
backend/src/application/chat/: create_session.rs  delete_session.rs  get_session_history.rs  list_user_sessions.rs  mod.rs  send_message.rs  send_message_v2.rs
backend/src/config/: chat.rs  mod.rs
backend/src/domain/: mod.rs
backend/src/domain/chat/: entity.rs  mod.rs  repository.rs  value_objects.rs
backend/src/handlers/: admin.rs  auth.rs  health.rs  mod.rs
backend/src/handlers/chat/: create_session.rs  delete_session.rs  dto.rs  get_history.rs  list_models.rs  list_sessions.rs  mod.rs  send_message.rs  send_message_v2.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/llm/: azure_provider.rs  factory.rs  mod.rs  model_registry.rs  provider.rs  sambanova_provider.rs
backend/src/infrastructure/persistence/: chat_repository.rs  mod.rs
backend/src/middleware/: admin.rs  auth.rs  chat_rate_limit.rs  mod.rs
backend/src/models/: chat_messages.rs  chat_sessions.rs  email_verifications.rs  mod.rs  o_auth_accounts.rs  prelude.rs  refresh_tokens.rs  sea_orm_active_enums.rs  users.rs
backend/src/openapi/: mod.rs
backend/src/services/: mod.rs
backend/src/services/auth/: error.rs  jwt.rs  mod.rs  password.rs  token_rotation.rs
backend/src/services/email/: mod.rs  verification.rs
backend/src/services/valkey/: blacklist.rs  chat_rate_limit.rs  mod.rs  rate_limit.rs
backend/src/utils/: mod.rs  token.rs
claudedocs/: authentication-implementation-summary.md  frontend-docs-viewer-docker-fix.md  frontend-docs-viewer-implementation.md  improve-documentation-implementation-report.md  phase-4-5-implementation-report.md  phase1-completion-report.md  responsive-docs-ui-proposal.md  rust-api-docs-integration.md
docs/: .phase8-validation-report.md  .validation-checklist.md  .validation-report.md  CHANGELOG.md  PHASE8-COMPLETION.md  README.md  chat-feature.md  chat-implementation-summary.md  chat-setup-guide.md  docker-compose-chat-setup.md
docs/api/: README.md  admin.md  authentication.md  reference.md  users.md
docs/architecture/: backend.md  frontend.md  overview.md
docs/backend/: README.md  api-handlers.md  architecture.md  database.md  models.md  rust-doc-guide.md  services.md  testing.md
docs/contributing/: README.md  code-style.md  pull-requests.md  testing-requirements.md
docs/deployment/: README.md  docker.md  environment-variables.md  monitoring.md  production.md
docs/frontend/: README.md  api-client.md  architecture.md  components.md  state-management.md  testing.md  themes.md
docs/frontend/screenshots/: CAPTURE-GUIDE.md  README.md
docs/getting-started/: installation.md  project-structure.md  quick-start.md
docs/guides/: README.md  admin-dashboard.md  api-client.md  authentication.md  database.md  email-verification.md  testing.md  themes.md
docs/proposals/: azure-ai-foundry-support-v2.md  azure-ai-foundry-support.md  llm-chatbot-feature.md
docs/troubleshooting/: README.md
frontend/: .biomeignore  Dockerfile  biome.json  components.json  package.json  tsconfig.json
frontend/public/rustdoc/: crates.js  help.html  search-index.js  settings.html  src-files.js
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/config/: models.ts
openapi/: schema.json
openspec/: project.md
openspec/proposals/: 002-frontend-authentication.md  002-implementation-summary.md  THEME_SYSTEM.md
src/models/: o_auth_accounts.rs  prelude.rs  refresh_tokens.rs
src/types/: api.ts
(+1360 files in other folders)
