[package]
name = "cobalt-stack-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sea-orm = { workspace = true }

# Valkey (Redis-compatible) - required for auth
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenAPI
utoipa = { workspace = true, features = ["uuid", "chrono"] }
utoipa-swagger-ui = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }
time = { workspace = true }

# UUID
uuid = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
# Testing
mockall = "0.13"

[features]
default = []

[[bin]]
name = "cobalt-stack-backend"
path = "src/main.rs"
