[package]
name = "cobalt-stack-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sea-orm = { workspace = true }

# Valkey (Redis-compatible) - required for auth
redis = { workspace = true }

# LLM / AI
async-openai = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenAPI
utoipa = { workspace = true, features = ["uuid", "chrono"] }
utoipa-swagger-ui = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }
time = { workspace = true }

# UUID
uuid = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
# Testing
mockall = "0.13"

[features]
default = []

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# Allow (too pedantic or future features)
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
needless_for_each = "allow"

[lints.rust]
dead_code = "allow"

[[bin]]
name = "cobalt-stack-backend"
path = "src/main.rs"

[[bin]]
name = "seed-admin"
path = "src/bin/seed_admin.rs"
